fix(dropdown): hide scrollbar in safary

--- a/packages/mosaic/dropdown/dropdown.scss
+++ b/packages/mosaic/dropdown/dropdown.scss
@@ -50,8 +50,6 @@ $mc-dropdown-panel-border-radius: 3px !default;
 }
 
 .mc-dropdown__content {
-    height: 100%;
-
     h1, h2, h3, h4, h5 {
         padding: 8px 16px 4px 16px;
         margin: 0;
